--- a/z-index_box-sizing_clip-path/style.css
+++ b/z-index_box-sizing_clip-path/style.css
@@ -13,6 +13,29 @@ h1{
     margin-left: 33%;
     margin-top: 23%;
 }
+/* Online serarch for clip path generator and then get parmetters from their 
+*/
 .clip_path{
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+}
+
+div.box{
+    height: 160px;
+    width: 250px;
+    border:10px;
+    border-color: orange;
+    border-style: solid;
+    background-color: yellow;
+    margin:30px;
+}
+h1{
+    position: inherit;
+    text-align:left;
+    font-size:25px;
+}
+.content_box{
+    box-sizing: content-box;
+}
+.border_box{
+    box-sizing: border-box;
 }
