--- a/example_forms/css/web2.css
+++ b/example_forms/css/web2.css
@@ -25,7 +25,7 @@ header h1{
     font-size: 7vh;
 }
 header p#writer{
-    position: relative;
+    position: absolute;
     top:40%;
     left:10%;
     font-size: 3vh;
@@ -40,11 +40,12 @@ ul .domainList{
     text-indent: 5%;
     font-size: initial;
 }
-div.writer_details
+p.writer_details
 {
     position: absolute;
     top:50%;
-    left:12%;
+    left:8%;
+    width:20%;
     font-size: 2vh;
     padding-left: 2vw;
     padding-right: 2vh;
@@ -58,5 +59,38 @@ div.writer_details:hover{
 nav{
     position: absolute;
     right: 10%;
-    top:40%;
+    top:30%;
+    background-color: transparent;
+    border:2px white solid;
+    padding:1vh 2vw 4vh 2vw;
+    align-items: center;
+    border-radius: 2vw;
+}
+ul{
+    list-style: none;
+}
+nav li{
+    margin-top: 3vh;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    text-align: center;
+    border-radius: 1vw;
+    border: 1px solid black ;
+}
+nav li:hover{
+    background-color: turquoise;
+    cursor: pointer;
+}
+header input[type="search"]{
+    position: absolute;
+    right:10vw;
+    top: 5vh;
+    border-color: wheat;
+    border-radius: 1vw;
+}
+li a{
+    text-decoration: none;
+    color:black;
 }
