Following changes are added 1- My own image (kashif kamran) is added 2- Something is updated in webdesign project 3- Flex Box is learned and its example is added in files flex flexBox.html and flexbox.css Thankyou

--- a/examples/css/webDesign.css
+++ b/examples/css/webDesign.css
@@ -11,7 +11,6 @@
 .backgroud{
     position: relative;
     background-color: var(--grey);
-
 }
 header{
     margin-left: auto;
@@ -105,5 +104,10 @@ section p{
     padding-top: 5vh;
     padding-left:2vw;
     padding-right: 2vw;
-
+}
+footer{
+    position: static;
+    height:5vh;
+    margin-top:20vh;
+    border:2px solid var(--aquaGreen);   
 }
