--- a/examples/css/flexBox.css
+++ b/examples/css/flexBox.css
@@ -1,14 +1,16 @@
-:root{
-    --bgColor:linear-gradient(to bottom,blue,red);
+.flex-container{
+    display: flex;
+    flex-direction: row;
+    height: 50vh;
+    border:2px solid red; 
+    justify-content:space-evenly;
+    align-items:center;
 }
-*{
-    padding: 0%;
-    margin: 0%;
+.flex-item{
+    background-color: orange;
+    border:2px solid black;
+    margin:10px;
+    width:100px;
+    height: 100px;
+    
 }
-.background{
-    position: absolute;
-    background-image: var(--bgColor);
-    width:100vw;
-    height: 200vh;
-}
-   
