--- a/examples/css/flexBox.css
+++ b/examples/css/flexBox.css
@@ -1,16 +1,23 @@
 .flex-container{
+    position: absolute;
+    right: 0px;
     display: flex;
-    flex-direction: row;
-    height: 50vh;
-    border:2px solid red; 
-    justify-content:space-evenly;
+    flex-direction: row; 
+    justify-content:space-evenly    ;
     align-items:center;
+    width: 40vw;
+    height: 10vh;
+
 }
 .flex-item{
     background-color: orange;
     border:2px solid black;
-    margin:10px;
-    width:100px;
-    height: 100px;
-    
+    text-align: center;
+    top:50%;
+    padding:2px 5px 3px 5px;
+    border-radius: 6px;
+}
+.flex-item:hover{
+    cursor: pointer;
+    font-size: 90%;
 }
